@@ -2,6 +2,8 @@
 AutoTrash=Auto Trash
 [mod-description]
 AutoTrash=Allows saving of different logistic request setups\nCan enable autotrash only in a certain logistics network\nKeeps your inventory clean of certain items
+[item-name]
+autotrash-network-selection=Network selection
 [at-gui]
 logistics-configuration=Logistics configuration
 presets=Presets
@@ -49,7 +51,6 @@ import-error=Invalid AutoTrash configuration. Only blueprints/strings created wi
 no-character=Auto Trash: No character, closing gui.
 invalid-gui=Auto Trash: The GUI has become invalid. This likely means that another mod tampered with it.
 no-presets-to-export=No presets to export.
-no-config-set=Can't export an empty configuration
 preset-updated=Preset "__1__" updated.
 added-to-temporary-trash=Added __1__ to temporary trash.
 removed-from-temporary-requests=Removed __1__ from temporary requests.
