@@ -2,6 +2,7 @@
 Version: 5.3.4
 Date: ????
   Changes:
+    - Fixed error when trying to export a preset with no items set
 ---------------------------------------------------------------------------------------------------
 Version: 5.3.3
 Date: 2020-11-28
